# hs-filenames2ext

./: CHANGELOG.md  README.md  build.sh  cabal.project.freeze  example.sh  hs-filenames2ext  hs-filenames2ext.cabal
app/: Main.hs
src/: GetExtension.hs
test/: TestGetExtension.hs
